--- a/config/config.json
+++ b/config/config.json
@@ -8,8 +8,8 @@
   },
   "NFT_NAME": "Galexyz",
   "SYMBOL": "GXYZ",
-  "MAX_SUPPLY": 2,
-  "WEI_COST": 75000000000000000,
+  "MAX_SUPPLY": 1,
+  "WEI_COST": 0,
   "DISPLAY_COST": 0.00,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Opeansea",
