--- a/config/config.json
+++ b/config/config.json
@@ -12,7 +12,7 @@
   "WEI_COST": 0,
   "DISPLAY_COST": 0.00,
   "GAS_LIMIT": 285000,
-  "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/",
+  "MARKETPLACE": "Tofunft",
+  "MARKETPLACE_LINK": "https://tofunft.com/collection/galexyz/items",
   "SHOW_BACKGROUND": true
 }
